web-infras/parser/tests/fixtures/esprima/ES6/generator/generator-parameter-invalid-binding-property/output.txt
[SyntaxError]: function statement requires a name (2,14)
2|    function*({x: y = yield 3}) {}
 |            ^
[SyntaxError]: yield expression can not used in parameter list (2,23)
2|    function*({x: y = yield 3}) {}
 |                     ^
